reference/5.1/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390782
Help Version: 5.2.0.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 2292aa015ff3471ac7febdda94e1a10e895dea27
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93220193"
---
# <span data-ttu-id="ccbd9-103">Microsoft.PowerShell.Core 모듈</span><span class="sxs-lookup"><span data-stu-id="ccbd9-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="ccbd9-104">Description</span><span class="sxs-lookup"><span data-stu-id="ccbd9-104">Description</span></span>

<span data-ttu-id="ccbd9-105">이 섹션에는 PowerShell과 함께 설치 되는 cmdlet에 대 한 도움말 항목이 포함 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="ccbd9-106">핵심 모듈에는 PowerShell의 기본 기능을 관리 하는 cmdlet 및 공급자가 포함 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="ccbd9-107">Microsoft. PowerShell. 핵심 Cmdlet</span><span class="sxs-lookup"><span data-stu-id="ccbd9-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="ccbd9-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="ccbd9-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="ccbd9-109">세션 기록에 항목을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="ccbd9-110">Add-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="ccbd9-110">Add-PSSnapin</span></span>](Add-PSSnapin.md)
<span data-ttu-id="ccbd9-111">하나 이상의 Windows PowerShell 스냅인을 현재 세션에 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-111">Adds one or more Windows PowerShell snap-ins to the current session.</span></span>

### [<span data-ttu-id="ccbd9-112">Clear-History</span><span class="sxs-lookup"><span data-stu-id="ccbd9-112">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="ccbd9-113">PowerShell 세션 명령 기록에서 항목을 삭제 합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-113">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="ccbd9-114">Clear-Host</span><span class="sxs-lookup"><span data-stu-id="ccbd9-114">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="ccbd9-115">호스트 프로그램의 표시를 지웁니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-115">Clears the display in the host program.</span></span>

### [<span data-ttu-id="ccbd9-116">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="ccbd9-116">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="ccbd9-117">연결이 끊긴 세션에 다시 연결합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-117">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="ccbd9-118">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="ccbd9-118">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="ccbd9-119">실행 중인 백그라운드, 원격 또는 Windows PowerShell 워크플로 작업을 디버깅 합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-119">Debugs a running background, remote, or Windows PowerShell Workflow job.</span></span>

### [<span data-ttu-id="ccbd9-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="ccbd9-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="ccbd9-121">PowerShell 끝점이 원격 연결을 받지 못하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="ccbd9-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ccbd9-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="ccbd9-123">로컬 컴퓨터의 세션 구성을 사용하지 않도록 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="ccbd9-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="ccbd9-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="ccbd9-125">세션에서 연결을 끊습니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="ccbd9-126">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="ccbd9-126">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="ccbd9-127">원격 명령을 받도록 컴퓨터를 구성합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-127">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="ccbd9-128">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ccbd9-128">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="ccbd9-129">로컬 컴퓨터의 세션 구성을 사용하도록 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-129">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="ccbd9-130">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="ccbd9-130">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="ccbd9-131">에 연결 하 고 로컬 프로세스를 사용 하 여 대화형 세션으로 전환 합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-131">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="ccbd9-132">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="ccbd9-132">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="ccbd9-133">원격 컴퓨터와 대화형 세션을 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-133">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="ccbd9-134">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="ccbd9-134">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="ccbd9-135">로컬 프로세스를 사용 하 여 대화형 세션을 닫습니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-135">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="ccbd9-136">Exit-PSSession</span><span class="sxs-lookup"><span data-stu-id="ccbd9-136">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="ccbd9-137">원격 컴퓨터와의 대화형 세션을 종료합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-137">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="ccbd9-138">Export-Console</span><span class="sxs-lookup"><span data-stu-id="ccbd9-138">Export-Console</span></span>](Export-Console.md)
<span data-ttu-id="ccbd9-139">현재 세션의 스냅인 이름을 콘솔 파일로 내보냅니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-139">Exports the names of snap-ins in the current session to a console file.</span></span>

### [<span data-ttu-id="ccbd9-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="ccbd9-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="ccbd9-141">내보내는 모듈 멤버를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="ccbd9-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="ccbd9-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="ccbd9-143">입력 개체 컬렉션에 있는 각 항목에 대해 작업을 수행합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="ccbd9-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="ccbd9-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="ccbd9-145">모든 명령을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-145">Gets all commands.</span></span>

### [<span data-ttu-id="ccbd9-146">Get-Help</span><span class="sxs-lookup"><span data-stu-id="ccbd9-146">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="ccbd9-147">PowerShell 명령 및 개념에 대 한 정보를 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-147">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="ccbd9-148">Get-History</span><span class="sxs-lookup"><span data-stu-id="ccbd9-148">Get-History</span></span>](Get-History.md)
<span data-ttu-id="ccbd9-149">현재 세션 중에 입력된 명령 목록을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-149">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="ccbd9-150">Get-Job</span><span class="sxs-lookup"><span data-stu-id="ccbd9-150">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="ccbd9-151">현재 세션에서 실행 중인 PowerShell 백그라운드 작업을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-151">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="ccbd9-152">Get-Module</span><span class="sxs-lookup"><span data-stu-id="ccbd9-152">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="ccbd9-153">현재 세션으로 가져왔거나 가져올 수 있는 모듈을 검색합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-153">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="ccbd9-154">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="ccbd9-154">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="ccbd9-155">PowerShell 호스트에 대 한 프로세스 정보를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-155">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="ccbd9-156">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="ccbd9-156">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="ccbd9-157">로컬 및 원격 컴퓨터의 PowerShell 세션을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-157">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="ccbd9-158">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="ccbd9-158">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="ccbd9-159">제한 된 세션 구성에 대 한 특정 사용자의 기능을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-159">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="ccbd9-160">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ccbd9-160">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="ccbd9-161">컴퓨터에 등록된 세션 구성을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-161">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="ccbd9-162">Get-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="ccbd9-162">Get-PSSnapin</span></span>](Get-PSSnapin.md)
<span data-ttu-id="ccbd9-163">컴퓨터의 Windows PowerShell 스냅인을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-163">Gets the Windows PowerShell snap-ins on the computer.</span></span>

### [<span data-ttu-id="ccbd9-164">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="ccbd9-164">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="ccbd9-165">승인 된 PowerShell 동사를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-165">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="ccbd9-166">모듈 가져오기</span><span class="sxs-lookup"><span data-stu-id="ccbd9-166">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="ccbd9-167">현재 세션에 모듈을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-167">Adds modules to the current session.</span></span>

### [<span data-ttu-id="ccbd9-168">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="ccbd9-168">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="ccbd9-169">로컬 및 원격 컴퓨터에서 명령을 실행합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-169">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="ccbd9-170">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="ccbd9-170">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="ccbd9-171">세션 기록에서 명령을 실행합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-171">Runs commands from the session history.</span></span>

### [<span data-ttu-id="ccbd9-172">New-Module</span><span class="sxs-lookup"><span data-stu-id="ccbd9-172">New-Module</span></span>](New-Module.md)
<span data-ttu-id="ccbd9-173">메모리에만 있는 새 동적 모듈을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-173">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="ccbd9-174">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="ccbd9-174">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="ccbd9-175">새 모듈 매니페스트를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-175">Creates a new module manifest.</span></span>

### [<span data-ttu-id="ccbd9-176">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="ccbd9-176">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="ccbd9-177">세션 구성을 통해 노출할 기능 집합을 정의 하는 파일을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-177">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="ccbd9-178">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="ccbd9-178">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="ccbd9-179">로컬 또는 원격 컴퓨터에 대한 영구 연결을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-179">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="ccbd9-180">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="ccbd9-180">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="ccbd9-181">세션 구성을 정의하는 파일을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-181">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="ccbd9-182">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="ccbd9-182">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="ccbd9-183">PSSession에 대한 고급 옵션을 포함하는 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-183">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="ccbd9-184">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="ccbd9-184">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="ccbd9-185">세션 구성에 대한 고급 옵션을 포함하는 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-185">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="ccbd9-186">Out-Default</span><span class="sxs-lookup"><span data-stu-id="ccbd9-186">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="ccbd9-187">출력을 기본 포맷터와 기본 출력 cmdlet으로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-187">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="ccbd9-188">Out-Host</span><span class="sxs-lookup"><span data-stu-id="ccbd9-188">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="ccbd9-189">출력을 명령줄로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-189">Sends output to the command line.</span></span>

### [<span data-ttu-id="ccbd9-190">Out-Null</span><span class="sxs-lookup"><span data-stu-id="ccbd9-190">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="ccbd9-191">파이프라인으로 보내거나 표시 하지 않고 출력을 숨깁니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-191">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="ccbd9-192">Receive-Job</span><span class="sxs-lookup"><span data-stu-id="ccbd9-192">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="ccbd9-193">현재 세션의 PowerShell 백그라운드 작업 결과를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-193">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="ccbd9-194">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="ccbd9-194">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="ccbd9-195">연결 되지 않은 세션에서 명령의 결과를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-195">Gets results of commands in disconnected sessions.</span></span>

### [<span data-ttu-id="ccbd9-196">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="ccbd9-196">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="ccbd9-197">Completer 사용자 지정 인수를 등록 합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-197">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="ccbd9-198">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ccbd9-198">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="ccbd9-199">새 세션 구성을 만들어 등록합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-199">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="ccbd9-200">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="ccbd9-200">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="ccbd9-201">PowerShell 백그라운드 작업을 삭제 합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-201">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="ccbd9-202">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="ccbd9-202">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="ccbd9-203">현재 세션에서 모듈을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-203">Removes modules from the current session.</span></span>

### [<span data-ttu-id="ccbd9-204">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="ccbd9-204">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="ccbd9-205">하나 이상의 PowerShell 세션 (PSSessions)을 닫습니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-205">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="ccbd9-206">Remove-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="ccbd9-206">Remove-PSSnapin</span></span>](Remove-PSSnapin.md)
<span data-ttu-id="ccbd9-207">현재 세션에서 Windows PowerShell 스냅인을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-207">Removes Windows PowerShell snap-ins from the current session.</span></span>

### [<span data-ttu-id="ccbd9-208">Resume-Job</span><span class="sxs-lookup"><span data-stu-id="ccbd9-208">Resume-Job</span></span>](Resume-Job.md)
<span data-ttu-id="ccbd9-209">일시 중단된 작업을 다시 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-209">Restarts a suspended job.</span></span>

### [<span data-ttu-id="ccbd9-210">Save-Help</span><span class="sxs-lookup"><span data-stu-id="ccbd9-210">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="ccbd9-211">최신 도움말 파일을 다운로드하여 파일 시스템 디렉터리에 저장합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-211">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="ccbd9-212">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="ccbd9-212">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="ccbd9-213">스크립트 디버깅 기능을 설정/해제하고 추적 수준을 설정하며 Strict 모드를 전환합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-213">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="ccbd9-214">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ccbd9-214">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="ccbd9-215">등록된 세션 구성의 속성을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-215">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="ccbd9-216">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="ccbd9-216">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="ccbd9-217">식, 스크립트 및 스크립트 블록에서 코딩 규칙을 설정하고 적용합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-217">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="ccbd9-218">Start-Job</span><span class="sxs-lookup"><span data-stu-id="ccbd9-218">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="ccbd9-219">PowerShell 백그라운드 작업을 시작 합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-219">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="ccbd9-220">Stop-Job</span><span class="sxs-lookup"><span data-stu-id="ccbd9-220">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="ccbd9-221">PowerShell 백그라운드 작업을 중지 합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-221">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="ccbd9-222">Suspend-Job</span><span class="sxs-lookup"><span data-stu-id="ccbd9-222">Suspend-Job</span></span>](Suspend-Job.md)
<span data-ttu-id="ccbd9-223">워크플로 작업을 일시적으로 중지합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-223">Temporarily stops workflow jobs.</span></span>

### [<span data-ttu-id="ccbd9-224">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="ccbd9-224">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="ccbd9-225">모듈 매니페스트 파일이 모듈의 내용을 정확하게 설명하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-225">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="ccbd9-226">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="ccbd9-226">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="ccbd9-227">세션 구성 파일에서 키와 값을 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-227">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="ccbd9-228">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="ccbd9-228">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="ccbd9-229">컴퓨터에서 등록된 세션 구성을 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-229">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="ccbd9-230">Update-Help</span><span class="sxs-lookup"><span data-stu-id="ccbd9-230">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="ccbd9-231">최신 도움말 파일을 다운로드하여 컴퓨터에 설치합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-231">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="ccbd9-232">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="ccbd9-232">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="ccbd9-233">세션에서 실행 중인 PowerShell 백그라운드 작업 중 하나 또는 모두가 완료 될 때까지 명령 프롬프트를 표시 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-233">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="ccbd9-234">Where-Object</span><span class="sxs-lookup"><span data-stu-id="ccbd9-234">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="ccbd9-235">속성 값에 따라 컬렉션에서 개체를 선택합니다.</span><span class="sxs-lookup"><span data-stu-id="ccbd9-235">Selects objects from a collection based on their property values.</span></span>
