reference/7.0/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113534
Help Version: 7.0.1.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 02/28/2019
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 839e2590d536cf06b28226f24d3a546a13520ecb
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93220418"
---
# <span data-ttu-id="f9181-103">Microsoft.PowerShell.Core 모듈</span><span class="sxs-lookup"><span data-stu-id="f9181-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="f9181-104">Description</span><span class="sxs-lookup"><span data-stu-id="f9181-104">Description</span></span>

<span data-ttu-id="f9181-105">이 섹션에는 PowerShell과 함께 설치 되는 cmdlet에 대 한 도움말 항목이 포함 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="f9181-106">핵심 모듈에는 PowerShell의 기본 기능을 관리 하는 cmdlet 및 공급자가 포함 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="f9181-107">Microsoft. PowerShell. 핵심 Cmdlet</span><span class="sxs-lookup"><span data-stu-id="f9181-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="f9181-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="f9181-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="f9181-109">세션 기록에 항목을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="f9181-110">Clear-History</span><span class="sxs-lookup"><span data-stu-id="f9181-110">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="f9181-111">PowerShell 세션 명령 기록에서 항목을 삭제 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-111">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="f9181-112">Clear-Host</span><span class="sxs-lookup"><span data-stu-id="f9181-112">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="f9181-113">호스트 프로그램의 표시를 지웁니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-113">Clears the display in the host program.</span></span>

### [<span data-ttu-id="f9181-114">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="f9181-114">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="f9181-115">연결이 끊긴 세션에 다시 연결합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-115">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="f9181-116">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="f9181-116">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="f9181-117">실행 중인 백그라운드, 원격 또는 PowerShell 워크플로 작업을 디버깅 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-117">Debugs a running background, remote, or PowerShell Workflow job.</span></span>

### [<span data-ttu-id="f9181-118">Disable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="f9181-118">Disable-ExperimentalFeature</span></span>](Disable-ExperimentalFeature.md)
<span data-ttu-id="f9181-119">PowerShell의 새 인스턴스를 시작할 때 실험적 기능을 사용 하지 않도록 설정 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-119">Disable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="f9181-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="f9181-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="f9181-121">PowerShell 끝점이 원격 연결을 받지 못하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="f9181-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="f9181-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="f9181-123">로컬 컴퓨터의 세션 구성을 사용하지 않도록 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="f9181-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="f9181-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="f9181-125">세션에서 연결을 끊습니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="f9181-126">Enable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="f9181-126">Enable-ExperimentalFeature</span></span>](Enable-ExperimentalFeature.md)
<span data-ttu-id="f9181-127">PowerShell의 새 인스턴스를 시작할 때 실험적 기능을 사용 하도록 설정 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-127">Enable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="f9181-128">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="f9181-128">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="f9181-129">원격 명령을 받도록 컴퓨터를 구성합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-129">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="f9181-130">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="f9181-130">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="f9181-131">로컬 컴퓨터의 세션 구성을 사용하도록 설정합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-131">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="f9181-132">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="f9181-132">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="f9181-133">에 연결 하 고 로컬 프로세스를 사용 하 여 대화형 세션으로 전환 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-133">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="f9181-134">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="f9181-134">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="f9181-135">원격 컴퓨터와 대화형 세션을 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-135">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="f9181-136">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="f9181-136">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="f9181-137">로컬 프로세스를 사용 하 여 대화형 세션을 닫습니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-137">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="f9181-138">Exit-PSSession</span><span class="sxs-lookup"><span data-stu-id="f9181-138">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="f9181-139">원격 컴퓨터와의 대화형 세션을 종료합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-139">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="f9181-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="f9181-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="f9181-141">내보내는 모듈 멤버를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="f9181-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="f9181-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="f9181-143">입력 개체 컬렉션에 있는 각 항목에 대해 작업을 수행합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="f9181-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="f9181-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="f9181-145">모든 명령을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-145">Gets all commands.</span></span>

### [<span data-ttu-id="f9181-146">Get-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="f9181-146">Get-ExperimentalFeature</span></span>](Get-ExperimentalFeature.md)
<span data-ttu-id="f9181-147">실험적 기능을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-147">Gets experimental features.</span></span>

### [<span data-ttu-id="f9181-148">Get-Help</span><span class="sxs-lookup"><span data-stu-id="f9181-148">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="f9181-149">PowerShell 명령 및 개념에 대 한 정보를 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-149">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="f9181-150">Get-History</span><span class="sxs-lookup"><span data-stu-id="f9181-150">Get-History</span></span>](Get-History.md)
<span data-ttu-id="f9181-151">현재 세션 중에 입력된 명령 목록을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-151">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="f9181-152">Get-Job</span><span class="sxs-lookup"><span data-stu-id="f9181-152">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="f9181-153">현재 세션에서 실행 중인 PowerShell 백그라운드 작업을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-153">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="f9181-154">Get-Module</span><span class="sxs-lookup"><span data-stu-id="f9181-154">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="f9181-155">현재 세션으로 가져왔거나 가져올 수 있는 모듈을 검색합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-155">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="f9181-156">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="f9181-156">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="f9181-157">PowerShell 호스트에 대 한 프로세스 정보를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-157">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="f9181-158">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="f9181-158">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="f9181-159">로컬 및 원격 컴퓨터의 PowerShell 세션을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-159">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="f9181-160">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="f9181-160">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="f9181-161">제한 된 세션 구성에 대 한 특정 사용자의 기능을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-161">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="f9181-162">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="f9181-162">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="f9181-163">컴퓨터에 등록된 세션 구성을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-163">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="f9181-164">모듈 가져오기</span><span class="sxs-lookup"><span data-stu-id="f9181-164">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="f9181-165">현재 세션에 모듈을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-165">Adds modules to the current session.</span></span>

### [<span data-ttu-id="f9181-166">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="f9181-166">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="f9181-167">로컬 및 원격 컴퓨터에서 명령을 실행합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-167">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="f9181-168">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="f9181-168">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="f9181-169">세션 기록에서 명령을 실행합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-169">Runs commands from the session history.</span></span>

### [<span data-ttu-id="f9181-170">New-Module</span><span class="sxs-lookup"><span data-stu-id="f9181-170">New-Module</span></span>](New-Module.md)
<span data-ttu-id="f9181-171">메모리에만 있는 새 동적 모듈을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-171">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="f9181-172">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="f9181-172">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="f9181-173">새 모듈 매니페스트를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-173">Creates a new module manifest.</span></span>

### [<span data-ttu-id="f9181-174">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="f9181-174">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="f9181-175">세션 구성을 통해 노출할 기능 집합을 정의 하는 파일을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-175">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="f9181-176">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="f9181-176">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="f9181-177">로컬 또는 원격 컴퓨터에 대한 영구 연결을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-177">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="f9181-178">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="f9181-178">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="f9181-179">세션 구성을 정의하는 파일을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-179">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="f9181-180">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="f9181-180">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="f9181-181">PSSession에 대한 고급 옵션을 포함하는 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-181">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="f9181-182">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="f9181-182">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="f9181-183">세션 구성에 대한 고급 옵션을 포함하는 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-183">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="f9181-184">Out-Default</span><span class="sxs-lookup"><span data-stu-id="f9181-184">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="f9181-185">출력을 기본 포맷터와 기본 출력 cmdlet으로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-185">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="f9181-186">Out-Host</span><span class="sxs-lookup"><span data-stu-id="f9181-186">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="f9181-187">출력을 명령줄로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-187">Sends output to the command line.</span></span>

### [<span data-ttu-id="f9181-188">Out-Null</span><span class="sxs-lookup"><span data-stu-id="f9181-188">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="f9181-189">파이프라인으로 보내거나 표시 하지 않고 출력을 숨깁니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-189">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="f9181-190">Receive-Job</span><span class="sxs-lookup"><span data-stu-id="f9181-190">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="f9181-191">현재 세션의 PowerShell 백그라운드 작업 결과를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-191">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="f9181-192">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="f9181-192">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="f9181-193">연결이 끊긴 세션에서 명령의 결과를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-193">Gets results of commands in disconnected sessions</span></span>

### [<span data-ttu-id="f9181-194">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="f9181-194">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="f9181-195">Completer 사용자 지정 인수를 등록 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-195">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="f9181-196">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="f9181-196">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="f9181-197">새 세션 구성을 만들어 등록합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-197">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="f9181-198">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="f9181-198">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="f9181-199">PowerShell 백그라운드 작업을 삭제 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-199">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="f9181-200">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="f9181-200">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="f9181-201">현재 세션에서 모듈을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-201">Removes modules from the current session.</span></span>

### [<span data-ttu-id="f9181-202">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="f9181-202">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="f9181-203">하나 이상의 PowerShell 세션 (PSSessions)을 닫습니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-203">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="f9181-204">Save-Help</span><span class="sxs-lookup"><span data-stu-id="f9181-204">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="f9181-205">최신 도움말 파일을 다운로드하여 파일 시스템 디렉터리에 저장합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-205">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="f9181-206">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="f9181-206">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="f9181-207">스크립트 디버깅 기능을 설정/해제하고 추적 수준을 설정하며 Strict 모드를 전환합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-207">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="f9181-208">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="f9181-208">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="f9181-209">등록된 세션 구성의 속성을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-209">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="f9181-210">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="f9181-210">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="f9181-211">식, 스크립트 및 스크립트 블록에서 코딩 규칙을 설정하고 적용합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-211">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="f9181-212">Start-Job</span><span class="sxs-lookup"><span data-stu-id="f9181-212">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="f9181-213">PowerShell 백그라운드 작업을 시작 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-213">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="f9181-214">Stop-Job</span><span class="sxs-lookup"><span data-stu-id="f9181-214">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="f9181-215">PowerShell 백그라운드 작업을 중지 합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-215">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="f9181-216">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="f9181-216">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="f9181-217">모듈 매니페스트 파일이 모듈의 내용을 정확하게 설명하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-217">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="f9181-218">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="f9181-218">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="f9181-219">세션 구성 파일에서 키와 값을 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-219">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="f9181-220">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="f9181-220">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="f9181-221">컴퓨터에서 등록된 세션 구성을 삭제합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-221">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="f9181-222">Update-Help</span><span class="sxs-lookup"><span data-stu-id="f9181-222">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="f9181-223">최신 도움말 파일을 다운로드하여 컴퓨터에 설치합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-223">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="f9181-224">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="f9181-224">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="f9181-225">세션에서 실행 중인 PowerShell 백그라운드 작업 중 하나 또는 모두가 완료 될 때까지 명령 프롬프트를 표시 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-225">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="f9181-226">Where-Object</span><span class="sxs-lookup"><span data-stu-id="f9181-226">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="f9181-227">속성 값에 따라 컬렉션에서 개체를 선택합니다.</span><span class="sxs-lookup"><span data-stu-id="f9181-227">Selects objects from a collection based on their property values.</span></span>
